--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,11 @@ http {
         index index.html;
 
         location / {
-            try_files $uri $uri/ =404;
+            try_files $uri $uri.html $uri/ =404;
+        }
+
+        location ~ \.html$ {
+            try_files $uri =404;
         }
     }
 }
