--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
 services:
   web:
-    image: nginx:latest
-    container_name: matsfx-homepage
+    build: .
+    container_name: website
     ports:
       - "${PORT}:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - .:/usr/share/nginx/html:ro
     restart: unless-stopped
